# inpaint

./: README.md
exemplar-based/: CMakeLists.txt
exemplar-based/examples/: inpaint_image.cpp
exemplar-based/inc/inpaint/: criminisi_inpainter.h  patch.h  patch_match.h  template_match_candidates.h
exemplar-based/src/: criminisi_inpainter.cpp  patch_match.cpp
opencvBasic/: CMakeLists.txt
opencvBasic/src/: basic.cpp
quiltImage/: CMakeLists.txt  README
quiltImage/src/: quiltImage.cpp
